# ScriptKitty

./: .gitignore  AGENT.md  CLAUDE.md  PROMPT.md  PROMPTx1.md  RALPH_TASK.md  README.md  UPDATE_TODO.md  implementation_plan.md  package-lock.json  progress.txt  ralph.sh
.mittens/: VISUAL_TEST_AGENT.md  view.lua
.scriptcad/: view.lua
crates/meep-export/: Cargo.toml
crates/meep-export/examples/: bridge_gap_resonator.json  bridge_gap_resonator_meep.py
crates/meep-export/src/: codegen.rs  geometry.rs  lib.rs  main.rs  material.rs  meep.rs
docs/: architecture-manifold-alternatives.md  architecture.md  getting-started.md  lua-api.md
examples/: fdtd_resonator.lua  helmholtz_fdtd_demo.lua  meep_test.lua  tube.lua  voxel_test.lua
examples/meep/: README.md  bridge_gap_resonator.py
examples/multiphysics/: bridge_gap_resonator.lua  cap_inner.stl  hallbach.lua  helmholtz_coil.lua  helmholtz_scaffold.stl  holder_adapter.stl  icd.stl  lid.stl  medium.stl  microscope.stl  pure_acoustics.lua  tight_fit_adapter.stl
loop/: ORCHESTRATOR.md  PHASE1_PLANNER.md  PHASE2_EXECUTOR.md  PHASE3_SCREENSHOT.md  PHASE5_CLEANUP.md  config.json  screenshot_assessment.json  state.json  verified_tasks.json
project/: Electron-MRI.lua  IMPLEMENTATION.md  helmholtz_coil.lua  helmholtz_scaffold.stl
renderer/: index.html  package-lock.json  package.json  vite.config.ts
renderer/src/: main.ts
scripts/: gpu-render.sh  start-ralph.sh  vast-screenshot.sh  vast-setup.sh
server/: Cargo.toml
server/src/: acoustic.rs  circuit.rs  export.rs  fdtd.rs  field.rs  geometry.rs  geometry_manifold.rs  main.rs  meep.rs  nanovna.rs  voxel.rs
specs/: acoustic.md  circuits.md  csg.md  garbage_collection.md  gotchas.md  groups.md  implementation_status.md  overview.md  view.md
specs/meep/: SPEC.md
specs/renderer/: colormap_plane.md
specs/server/: architecture.md  implementation_status.md
specs/stdlib/: acoustic.md  circuits.md  export.md  primitives.md  view.md
stdlib/: circuits.lua  csg.lua  export.lua  groups.lua  init.lua  materials.lua  physics.lua  primitives.lua  transforms.lua  view.lua
stdlib/instruments/: init.lua
