[package]
name = "meep-export"
version = "0.1.0"
edition = "2021"
description = "Translate Mittens CAD geometry to MEEP FDTD simulations"
authors = ["Mittens"]
license = "MIT"

[lib]
name = "meep_export"
path = "src/lib.rs"

[[bin]]
name = "mittens-to-meep"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Math
nalgebra = "0.33"

# Template rendering (for Python output)
minijinja = "2.0"

# Timestamps
chrono = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"
